--- a/homework/Homework_1.ipynb
+++ b/homework/Homework_1.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -121,14 +121,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:06<00:00, 150.34it/s]"
+      "100%|██████████| 1000/1000 [00:06<00:00, 152.77it/s]"
      ]
     },
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
        "Test RMSE   55.651767"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
        "       18.65421381, 18.97633457, 19.47203151, 20.1110887 , 20.87883147])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
        "Test RMSE   55.651767  55.651767"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
        "np.float64(55.65176693892665)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -601,15 +601,14 @@
    "metadata": {},
    "source": [
     "### A5.\n",
-    "- Log-scale grid: log값이 동일한 간격으로 증가하기 때문에 실제 눈금은 동일한 배율로 증가한다.\n",
+    "- Log-scale grid: log값이 동일한 간격으로 증가하기 때문에 실제 눈금은 동일한 배율로 증가합니다.\n",
     "\n",
-    "\n",
-    "- Linear-scale grid: 등차수열과 같이 같은 값의 차이로 grid가 증가한다."
+    "- Linear-scale grid: 등차수열과 같이 같은 값의 차이로 grid가 증가합니다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1396,7 +1395,7 @@
        "             scoring='neg_mean_squared_error')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1427,7 +1426,7 @@
    "source": [
     "### A6.\n",
     "\n",
-    "key name을 '{pipeline step name}__{parameter name}' 형식으로 지정하는 이유는 Pipeline 중 어떤 단게의 파라미터를 gridsearch 할지 지정해줄 필요가 있기 떄문입니다.\n",
+    "key name을 '{pipeline step name}__{parameter name}' 형식으로 지정하는 이유는 Pipeline 중 어떤 단게의 파라미터를 gridsearch 할지 지정해줄 필요가 있기 때문입니다.\n",
     "\n",
     "\n",
     "그렇게 어떤 파라미터를 지정할지 key에 정의한 뒤 어떤 값들을 후보로 설정할지 np.logspace, np.linspace 등 array 형태의 데이터를 넣어 최적의 파라미터를 찾는 과정을 거치게 됩니다."
@@ -1442,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1494,7 +1493,7 @@
        "Test RMSE   55.651767  55.651767  55.399790"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1508,18 +1507,11 @@
     "results['Ridge'] = [Ridge_train_RMSE, Ridge_test_RMSE]\n",
     "results"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "das511",
    "language": "python",
    "name": "python3"
   },
@@ -1533,7 +1525,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
