feat: edit homework1

--- a/homework/Homework_1.ipynb
+++ b/homework/Homework_1.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Homework 1\n",
-    "DAS 511, Spring 2025\n",
+    "DAS 511, Spring 2025, 작성자: 박철준\n",
     "\n",
     "1. Goal: 기초 Regression 분석 파이썬 실습, 모델 비교 및 선택\n",
     "2. How: 질문이 있는 곳마다 빈칸 채우기.\n",
