feat: submit exam

--- a/Classification Part 2 SVM.ipynb
+++ b/Classification Part 2 SVM.ipynb
@@ -2510,6 +2510,208 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "ebf7657c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>params</th>\n",
+       "      <th>mean_test_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>{'C': 1000, 'gamma': 0.5}</td>\n",
+       "      <td>0.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>{'C': 1, 'gamma': 0.5}</td>\n",
+       "      <td>0.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>{'C': 1, 'gamma': 1}</td>\n",
+       "      <td>0.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>{'C': 100, 'gamma': 1}</td>\n",
+       "      <td>0.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>{'C': 100, 'gamma': 0.5}</td>\n",
+       "      <td>0.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>{'C': 10, 'gamma': 1}</td>\n",
+       "      <td>0.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>{'C': 10, 'gamma': 0.5}</td>\n",
+       "      <td>0.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>{'C': 10, 'gamma': 2}</td>\n",
+       "      <td>0.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>{'C': 1000, 'gamma': 1}</td>\n",
+       "      <td>0.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>{'C': 1, 'gamma': 2}</td>\n",
+       "      <td>0.87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>{'C': 100, 'gamma': 2}</td>\n",
+       "      <td>0.87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>{'C': 1, 'gamma': 3}</td>\n",
+       "      <td>0.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>{'C': 1000, 'gamma': 2}</td>\n",
+       "      <td>0.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>{'C': 10, 'gamma': 3}</td>\n",
+       "      <td>0.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>{'C': 100, 'gamma': 4}</td>\n",
+       "      <td>0.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>{'C': 100, 'gamma': 3}</td>\n",
+       "      <td>0.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>{'C': 1000, 'gamma': 3}</td>\n",
+       "      <td>0.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>{'C': 1000, 'gamma': 4}</td>\n",
+       "      <td>0.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>{'C': 1, 'gamma': 4}</td>\n",
+       "      <td>0.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>{'C': 10, 'gamma': 4}</td>\n",
+       "      <td>0.84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>{'C': 0.1, 'gamma': 0.5}</td>\n",
+       "      <td>0.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>{'C': 0.1, 'gamma': 1}</td>\n",
+       "      <td>0.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>{'C': 0.1, 'gamma': 4}</td>\n",
+       "      <td>0.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>{'C': 0.1, 'gamma': 3}</td>\n",
+       "      <td>0.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>{'C': 0.1, 'gamma': 2}</td>\n",
+       "      <td>0.75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       params  mean_test_score\n",
+       "20  {'C': 1000, 'gamma': 0.5}             0.91\n",
+       "5      {'C': 1, 'gamma': 0.5}             0.91\n",
+       "6        {'C': 1, 'gamma': 1}             0.91\n",
+       "16     {'C': 100, 'gamma': 1}             0.89\n",
+       "15   {'C': 100, 'gamma': 0.5}             0.89\n",
+       "11      {'C': 10, 'gamma': 1}             0.88\n",
+       "10    {'C': 10, 'gamma': 0.5}             0.88\n",
+       "12      {'C': 10, 'gamma': 2}             0.88\n",
+       "21    {'C': 1000, 'gamma': 1}             0.88\n",
+       "7        {'C': 1, 'gamma': 2}             0.87\n",
+       "17     {'C': 100, 'gamma': 2}             0.87\n",
+       "8        {'C': 1, 'gamma': 3}             0.86\n",
+       "22    {'C': 1000, 'gamma': 2}             0.86\n",
+       "13      {'C': 10, 'gamma': 3}             0.86\n",
+       "19     {'C': 100, 'gamma': 4}             0.85\n",
+       "18     {'C': 100, 'gamma': 3}             0.85\n",
+       "23    {'C': 1000, 'gamma': 3}             0.85\n",
+       "24    {'C': 1000, 'gamma': 4}             0.85\n",
+       "9        {'C': 1, 'gamma': 4}             0.85\n",
+       "14      {'C': 10, 'gamma': 4}             0.84\n",
+       "0    {'C': 0.1, 'gamma': 0.5}             0.76\n",
+       "1      {'C': 0.1, 'gamma': 1}             0.75\n",
+       "4      {'C': 0.1, 'gamma': 4}             0.75\n",
+       "3      {'C': 0.1, 'gamma': 3}             0.75\n",
+       "2      {'C': 0.1, 'gamma': 2}             0.75"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "cv_results = pd.DataFrame(grid.cv_results_)\n",
+    "cv_results.sort_values('mean_test_score', ascending=False)[['params', 'mean_test_score']]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "093f4954",
    "metadata": {},
@@ -2519,7 +2721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "id": "a66d5368",
    "metadata": {
     "execution": {
@@ -2582,7 +2784,7 @@
        "2           6  19"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2867,7 +3069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "id": "01bf456b",
    "metadata": {
     "execution": {
@@ -2881,10 +3083,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x15bc0e290>"
+       "<matplotlib.collections.PathCollection at 0x11c176510>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2918,7 +3120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "id": "9d9b7fe8",
    "metadata": {
     "execution": {
@@ -2945,7 +3147,7 @@
     "svm_rbf_3 = SVC(kernel=\"rbf\",\n",
     "                C=10,\n",
     "                gamma=1,\n",
-    "                decision_function_shape='ovo');\n",
+    "                decision_function_shape='ovo')\n",
     "svm_rbf_3.fit(X, y)\n",
     "fig, ax = subplots(figsize=(8,8))\n",
     "plot_svm(X,\n",
